k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-status-page
  namespace: devops-status
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-status-page
  template:
    metadata:
      labels:
        app: devops-status-page
    spec:
      containers:
        - name: app
          image: ghcr.io/lakello/devops-status-page:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
