k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-status-page
  namespace: devops-status
spec:
  type: ClusterIP
  selector:
    app: devops-status-page
  ports:
    - port: 80
      targetPort: 8080
